--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@mui/styled-engine-sc": "^6.4.6",
+    "@reduxjs/toolkit": "^2.6.1",
+    "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
+    "sass": "^1.85.1",
+    "styled-components": "^6.1.15"
   }
 }
