--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.85.1",
     "styled-components": "^6.1.15"
   }
